<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:stretchColumns="1">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_column="1"
            android:padding="15dip"
            android:text="@string/view_user" />
    </TableRow>

    <View
        android:layout_height="3dip"
        android:background="#ffffffff" />

    <TableRow>

        <TextView
            android:padding="10dip"
            android:text="@string/name" />

        <TextView android:id="@+id/TextView_Name" />
    </TableRow>

    <View
        android:layout_height="3dip"
        android:background="#ffffffff" />

    <TableRow>

        <TextView
            android:padding="10dip"
            android:text="@string/mobile" />

        <TextView android:id="@+id/TextView_Mobile" />
    </TableRow>

    <View
        android:layout_height="3dip"
        android:background="#ffffffff" />

    <TableRow>

        <TextView
            android:padding="10dip"
            android:text="@string/home" />

        <TextView android:id="@+id/TextView_Home" />
    </TableRow>

    <View
        android:layout_height="3dip"
        android:background="#ffffffff" />

    <TableRow>

        <TextView
            android:padding="10dip"
            android:text="@string/address" />

        <TextView android:id="@+id/TextView_Address" />
    </TableRow>

    <View
        android:layout_height="3dip"
        android:background="#ffffffff" />

    <TableRow>

        <TextView
            android:padding="10dip"
            android:text="@string/email" />

        <TextView android:id="@+id/TextView_Email" />
    </TableRow>

    <View
        android:layout_height="3dip"
        android:background="#ffffffff" />

    <TableRow>

        <TextView
            android:padding="10dip"
            android:text="@string/blog" />

        <TextView android:id="@+id/TextView_Blog" />
    </TableRow>

</TableLayout>